# karchive

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KArchive.pri.in  KF5ArchiveConfig.cmake.in  KF6ArchiveConfig.cmake.in  Mainpage.dox  README.md  REUSE.toml  conanfile.py  karchive.categories  metainfo.yaml
autotests/: CMakeLists.txt  deprecatedtest.cpp  karchivetest.cpp  karchivetest.h  kcompressiondevicetest.cpp  kcompressiondevicetest.h  kfiltertest.cpp  kfiltertest.h  klimitediodevicetest.cpp  klimitediodevicetest.h
autotests/data/: 7z_coder_test_bcj.7z  7z_coder_test_bcj2.7z  7z_coder_test_bzip2.7z  7z_coder_test_copy.7z  7z_coder_test_deflate.7z  7z_coder_test_lzma.7z  7z_coder_test_lzma2.7z  7z_coder_test_zstd.7z  filename_ends_in_slash.7z  multiple_nameless_files.7z  ossfuzz_440829292.7z  ossfuzz_issue_441906077.7z  ossfuzz_testcase_4566647131406336.7z  ossfuzz_testcase_4784793343819776.7z  ossfuzz_testcase_5082404562993152.7z  ossfuzz_testcase_5125023070486528.7z  ossfuzz_testcase_5132547098214400.7z  ossfuzz_testcase_5141245598171136.7z  ossfuzz_testcase_5158171118469120.7z  ossfuzz_testcase_5161502865948672.7z  ossfuzz_testcase_5390784545488896.tar.xz  ossfuzz_testcase_5497856632094720.7z  ossfuzz_testcase_5503074996387840.7z  ossfuzz_testcase_5560695602348032.7z  ossfuzz_testcase_5581009572921344.7z  ossfuzz_testcase_5821682553257984.7z  ossfuzz_testcase_5991129817612288.7z  ossfuzz_testcase_6077171694370816.7z  ossfuzz_testcase_6096742417498112.7z  ossfuzz_testcase_6213340184772608.7z  ossfuzz_testcase_6248361801089024.7z  ossfuzz_testcase_6366650283917312.7z  ossfuzz_testcase_6532014901886976.7z  ossfuzz_testcase_6593198198947840.7z  ossfuzz_testcase_6597581431177216.7z  ossfuzz_testcase_6649925879529472.7z  ossfuzz_testcase_6653406484955136.7z  ossfuzz_testcase_6740459604213760.7z  password_protected.7z  readnumber_check.7z  (+3 more)
autotests/data/corpus/: sample.ar  sample.tar  sample.tar.lz  sample.tar.xz  sample.tar.zst
autotests/ossfuzz/: CMakeLists.txt  README.md  build_fuzzers.sh  karchive_fuzzer.cc  karchive_fuzzer_common.h  kcompressiondevice_fuzzer.cc  prepare_build.sh
examples/bzip2gzip/: CMakeLists.txt  main.cpp
examples/helloworld/: CMakeLists.txt  main.cpp
examples/tarlocalfiles/: CMakeLists.txt  main.cpp
examples/unzipper/: CMakeLists.txt  main.cpp
poqm/ar/: karchive5_qt.po  karchive6_qt.po
poqm/ast/: karchive6_qt.po
poqm/bg/: karchive6_qt.po
poqm/ca/: karchive5_qt.po  karchive6_qt.po
poqm/ca@valencia/: karchive5_qt.po  karchive6_qt.po
poqm/cs/: karchive5_qt.po  karchive6_qt.po
poqm/de/: karchive5_qt.po  karchive6_qt.po
poqm/en_GB/: karchive5_qt.po  karchive6_qt.po
poqm/eo/: karchive5_qt.po  karchive6_qt.po
poqm/es/: karchive5_qt.po  karchive6_qt.po
poqm/eu/: karchive5_qt.po  karchive6_qt.po
poqm/fi/: karchive5_qt.po  karchive6_qt.po
poqm/fr/: karchive5_qt.po  karchive6_qt.po
poqm/ga/: karchive5_qt.po  karchive6_qt.po
poqm/gl/: karchive5_qt.po  karchive6_qt.po
poqm/he/: karchive5_qt.po  karchive6_qt.po
poqm/hi/: karchive6_qt.po
poqm/hu/: karchive6_qt.po
poqm/ia/: karchive5_qt.po  karchive6_qt.po
poqm/id/: karchive5_qt.po  karchive6_qt.po
poqm/it/: karchive5_qt.po  karchive6_qt.po
poqm/ja/: karchive5_qt.po  karchive6_qt.po
poqm/ka/: karchive5_qt.po  karchive6_qt.po
poqm/ko/: karchive5_qt.po  karchive6_qt.po
poqm/lt/: karchive5_qt.po  karchive6_qt.po
poqm/lv/: karchive6_qt.po
poqm/nl/: karchive5_qt.po  karchive6_qt.po
poqm/nn/: karchive5_qt.po  karchive6_qt.po
poqm/pa/: karchive6_qt.po
poqm/pl/: karchive5_qt.po  karchive6_qt.po
poqm/pt/: karchive5_qt.po  karchive6_qt.po
poqm/pt_BR/: karchive5_qt.po  karchive6_qt.po
poqm/ro/: karchive5_qt.po  karchive6_qt.po
poqm/ru/: karchive5_qt.po  karchive6_qt.po
poqm/sa/: karchive6_qt.po
poqm/sk/: karchive5_qt.po  karchive6_qt.po
poqm/sl/: karchive5_qt.po  karchive6_qt.po
poqm/sv/: karchive5_qt.po  karchive6_qt.po
poqm/ta/: karchive6_qt.po
poqm/tr/: karchive5_qt.po  karchive6_qt.po
poqm/ug/: karchive6_qt.po
poqm/uk/: karchive5_qt.po  karchive6_qt.po
poqm/zh_CN/: karchive5_qt.po  karchive6_qt.po
poqm/zh_TW/: karchive5_qt.po  karchive6_qt.po
src/: CMakeLists.txt  Messages.sh  config-compression.h.cmake  k7zip.cpp  k7zip.h  kar.cpp  kar.h  karchive-index.qdoc  karchive.cpp  karchive.h  karchive.qdoc  karchive.qdocconf  karchive_p.h  karchivedirectory.h  karchiveentry.h  karchivefile.h  kbzip2filter.cpp  kbzip2filter.h  kcompressiondevice.cpp  kcompressiondevice.h  kcompressiondevice_p.h  kfilterbase.cpp  kfilterbase.h  kfilterdev.cpp  kfilterdev.h  kgzipfilter.cpp  kgzipfilter.h  klimitediodevice.cpp  klimitediodevice_p.h  klzfilter.cpp  knonefilter.cpp  knonefilter.h  krcc.cpp  krcc.h  ktar.cpp  ktar.h  kxzfilter.cpp  kxzfilter.h  kzip.cpp  kzip.h  (+5 more)
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  k7ziptest.cpp  kartest.cpp  krcctest.cpp  ktartest.cpp  kziptest.cpp
tier1/karchive/: CMakeLists.txt  README
tier1/karchive/autotests/: karchivetest.h  kfiltertest.h  klimitediodevicetest.h
tier1/karchive/examples/helloworld/: CMakeLists.txt
tier1/karchive/src/: CMakeLists.txt  k7zip.h  kar.cpp  karchive.cpp  karchive.h  kcompressiondevice.h  kfilterbase.cpp  kfilterbase.h  kfilterdev.h  kgzipfilter.cpp  knonefilter.cpp  knonefilter.h  ktar.cpp  kxzfilter.cpp
tier1/karchive/tests/: CMakeLists.txt  ktartest.cpp  kziptest.cpp
